# chorus-crush-plugin

./: .gitignore  CMakeLists.txt  README.md
Source/: BitCrusher.cpp  BitCrusher.h  Chorus.cpp  Chorus.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
